--- a/content/collections/appointment.yaml
+++ b/content/collections/appointment.yaml
@@ -1,8 +1,9 @@
-title: 'Educational Material'
-template: educational_material/show
+title: Appointment
+template: appointment/show
 layout: layout
 revisions: false
-route: /education
+route: /bookappointment
+slugs: false
 sort_dir: asc
 date_behavior:
   past: public
