--- a/content/collections/patience-feedback.yaml
+++ b/content/collections/patience-feedback.yaml
@@ -1,8 +1,9 @@
-title: 'Educational Material'
-template: educational_material/show
+title: Patience-Feedback
+template: patience-feedback/show
 layout: layout
 revisions: false
-route: /education
+route: /patience-feedback
+slugs: false
 sort_dir: asc
 date_behavior:
   past: public
