--- a/resources/blueprints/collections/doctor/doctor.yaml
+++ b/resources/blueprints/collections/doctor/doctor.yaml
@@ -11,3 +11,5 @@ tabs:
             field:
               type: text
               required: true
+              validate:
+                - required
