--- a/content/collections/services_g_m_h.yaml
+++ b/content/collections/services_g_m_h.yaml
@@ -2,7 +2,7 @@ title: 'Services | G| M | H'
 template: services_g_m_h/show
 layout: layout
 revisions: false
-route: '/services_gmh/{slug}'
+route: /services_gmh
 sort_dir: asc
 date_behavior:
   past: public
