added Services page

--- a/resources/blueprints/collections/eye_consultation/eye_consultation.yaml
+++ b/resources/blueprints/collections/eye_consultation/eye_consultation.yaml
@@ -13,23 +13,76 @@ tabs:
               validate:
                 - required
           -
-            handle: sub_title
+            handle: contents
             field:
-              input_type: text
-              antlers: false
-              type: text
-              display: 'Sub Title'
-              listable: hidden
-              instructions_position: above
-              visibility: visible
-              replicator_preview: true
-              hide_display: false
-          -
-            handle: description
-            field:
-              antlers: false
-              type: textarea
-              display: Description
+              collapse: false
+              previews: true
+              fullscreen: true
+              sets:
+                new_set_group:
+                  display: 'New Set Group'
+                  instructions: null
+                  icon: null
+                  sets:
+                    new_set:
+                      display: 'New Set'
+                      instructions: null
+                      icon: null
+                      fields:
+                        -
+                          handle: image
+                          field:
+                            mode: list
+                            container: assets
+                            restrict: false
+                            allow_uploads: true
+                            show_filename: true
+                            show_set_alt: true
+                            type: assets
+                            display: Image
+                            listable: hidden
+                            instructions_position: above
+                            visibility: visible
+                            replicator_preview: true
+                            hide_display: false
+                        -
+                          handle: title
+                          field:
+                            input_type: text
+                            antlers: false
+                            type: text
+                            display: Title
+                            listable: hidden
+                            instructions_position: above
+                            visibility: visible
+                            replicator_preview: true
+                            hide_display: false
+                        -
+                          handle: description
+                          field:
+                            input_type: text
+                            antlers: false
+                            type: text
+                            display: Description
+                            listable: hidden
+                            instructions_position: above
+                            visibility: visible
+                            replicator_preview: true
+                            hide_display: false
+                        -
+                          handle: link
+                          field:
+                            input_type: text
+                            antlers: false
+                            type: text
+                            display: '/ Link'
+                            listable: hidden
+                            instructions_position: above
+                            visibility: visible
+                            replicator_preview: true
+                            hide_display: false
+              type: replicator
+              display: Contents
               listable: hidden
               instructions_position: above
               visibility: visible
