--- a/content/collections/cataract_surgery.yaml
+++ b/content/collections/cataract_surgery.yaml
@@ -1,8 +1,8 @@
-title: 'Diabetic clinic'
-template: diabetic_clinic/show
+title: 'Cataract Surgery'
+template: cataract_surgery/show
 layout: layout
 revisions: false
-route: /diabetic_clinic
+route: /cataract_surgery
 slugs: false
 sort_dir: asc
 date_behavior:
