Changes made to other services

--- a/resources/blueprints/collections/eye_consultation/eye_consultation.yaml
+++ b/resources/blueprints/collections/eye_consultation/eye_consultation.yaml
@@ -1,4 +1,4 @@
-title: 'Eye Consultation'
+title: 'General Ophthalmology'
 tabs:
   main:
     display: Main
@@ -18,6 +18,8 @@ tabs:
               visibility: visible
               replicator_preview: true
               hide_display: false
+              validate:
+                - required
           -
             handle: description
             field:
