--- a/resources/blueprints/collections/services_g_m_d/services_g_m_d.yaml
+++ b/resources/blueprints/collections/services_g_m_d/services_g_m_d.yaml
@@ -13,136 +13,16 @@ tabs:
               validate:
                 - required
           -
-            handle: body_title
+            handle: description
             field:
-              input_type: text
               antlers: false
-              type: text
-              display: 'Body title'
+              type: textarea
+              display: Description
               listable: hidden
               instructions_position: above
               visibility: visible
               replicator_preview: true
               hide_display: false
-          -
-            handle: body_description
-            field:
-              restrict: false
-              buttons:
-                - bold
-                - italic
-                - unorderedlist
-                - orderedlist
-                - quote
-                - link
-                - image
-                - table
-              automatic_line_breaks: true
-              automatic_links: false
-              escape_markup: false
-              heading_anchors: false
-              smartypants: false
-              table_of_contents: false
-              antlers: false
-              type: markdown
-              display: 'Body Description'
-              listable: hidden
-              instructions_position: above
-              visibility: visible
-              replicator_preview: true
-              hide_display: false
-          -
-            handle: list_items
-            field:
-              collapse: false
-              previews: true
-              fullscreen: true
-              sets:
-                new_set_group:
-                  display: 'New Set Group'
-                  instructions: null
-                  icon: null
-                  sets:
-                    new_set:
-                      display: 'New Set'
-                      instructions: null
-                      icon: null
-                      fields:
-                        -
-                          handle: item
-                          field:
-                            input_type: text
-                            antlers: false
-                            type: text
-                            display: Item
-                            listable: hidden
-                            instructions_position: above
-                            visibility: visible
-                            replicator_preview: true
-                            hide_display: false
-              type: replicator
-              display: 'List Items'
-              listable: hidden
-              instructions_position: above
-              visibility: visible
-              replicator_preview: true
-              hide_display: false
-          -
-            handle: sidebar_title
-            field:
-              input_type: text
-              antlers: false
-              type: text
-              display: 'sidebar title'
-              listable: hidden
-              instructions_position: above
-              visibility: visible
-              replicator_preview: true
-              hide_display: false
-          -
-            handle: sidebar_description
-            field:
-              restrict: false
-              buttons:
-                - bold
-                - italic
-                - unorderedlist
-                - orderedlist
-                - quote
-                - link
-                - image
-                - table
-              automatic_line_breaks: true
-              automatic_links: false
-              escape_markup: false
-              heading_anchors: false
-              smartypants: false
-              table_of_contents: false
-              antlers: false
-              type: markdown
-              display: 'Sidebar Description'
-              listable: hidden
-              instructions_position: above
-              visibility: visible
-              replicator_preview: true
-              hide_display: false
-          -
-            handle: sidebar_image
-            field:
-              mode: list
-              container: assets
-              restrict: false
-              allow_uploads: true
-              show_filename: true
-              show_set_alt: true
-              type: assets
-              display: 'Sidebar Image'
-              listable: hidden
-              instructions_position: above
-              visibility: visible
-              replicator_preview: true
-              hide_display: false
-              max_files: 1
   sidebar:
     display: Sidebar
     sections:
