--- a/content/collections/eye_surgery_and_procedures.yaml
+++ b/content/collections/eye_surgery_and_procedures.yaml
@@ -1,4 +1,4 @@
-title: 'Eye surgery and Procedures'
+title: 'Corneal Clinic and Transplant'
 template: eye_surgery_and_procedures/show
 layout: layout
 revisions: false
