--- a/resources/blueprints/collections/newsletter/newsletter.yaml
+++ b/resources/blueprints/collections/newsletter/newsletter.yaml
@@ -56,8 +56,10 @@ tabs:
                         -
                           handle: news_link
                           field:
-                            type: link
-                            display: 'News link'
+                            input_type: text
+                            antlers: false
+                            type: text
+                            display: 'news link'
                             listable: hidden
                             instructions_position: above
                             visibility: visible
