--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,16 @@
-APP_NAME=Laravel
+APP_NAME=Statamic
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:xtrXptHjcLpWLKn3SjY14SWORTx2iFS8Loo1QhPNVEU=
 APP_DEBUG=true
 APP_URL=http://localhost
+
+STATAMIC_LICENSE_KEY=
+STATAMIC_STACHE_WATCHER=true
+STATAMIC_STATIC_CACHING_STRATEGY=null
+STATAMIC_REVISIONS_ENABLED=false
+STATAMIC_GRAPHQL_ENABLED=false
+STATAMIC_API_ENABLED=false
+STATAMIC_GIT_ENABLED=false
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,7 +19,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=cityeyehospital
+DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -29,12 +37,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_HOST=smtp.office365.com
+MAIL_PORT=587
+MAIL_USERNAME=crypusgatia@cityeyehospital.or.ke
+MAIL_PASSWORD=pyfbzkvvrjcccsjd
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=crypusgatia@cityeyehospital.or.ke
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
@@ -51,9 +59,10 @@ PUSHER_PORT=443
 PUSHER_SCHEME=https
 PUSHER_APP_CLUSTER=mt1
 
-VITE_APP_NAME="${APP_NAME}"
 VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+DEBUGBAR_ENABLED=false
