added the customer review section on the backend

--- a/resources/blueprints/collections/pages/index.yaml
+++ b/resources/blueprints/collections/pages/index.yaml
@@ -240,6 +240,69 @@ tabs:
               visibility: visible
               replicator_preview: true
               hide_display: false
+          -
+            handle: customer_review
+            field:
+              collapse: false
+              previews: true
+              fullscreen: true
+              sets:
+                new_set_group:
+                  display: 'New Set Group'
+                  instructions: null
+                  icon: null
+                  sets:
+                    new_set:
+                      display: 'New Set'
+                      instructions: null
+                      icon: null
+                      fields:
+                        -
+                          handle: customer_name
+                          field:
+                            input_type: text
+                            antlers: false
+                            type: text
+                            display: 'Customer Name'
+                            listable: hidden
+                            instructions_position: above
+                            visibility: visible
+                            replicator_preview: true
+                            hide_display: false
+                        -
+                          handle: customer_profile
+                          field:
+                            mode: list
+                            container: assets
+                            restrict: false
+                            allow_uploads: true
+                            show_filename: true
+                            show_set_alt: true
+                            type: assets
+                            display: 'Customer Profile'
+                            listable: hidden
+                            instructions_position: above
+                            visibility: visible
+                            replicator_preview: true
+                            hide_display: false
+                        -
+                          handle: customer_quote
+                          field:
+                            antlers: false
+                            type: textarea
+                            display: 'Customer quote'
+                            listable: hidden
+                            instructions_position: above
+                            visibility: visible
+                            replicator_preview: true
+                            hide_display: false
+              type: replicator
+              display: 'Customer Review'
+              listable: hidden
+              instructions_position: above
+              visibility: visible
+              replicator_preview: true
+              hide_display: false
   sidebar:
     display: Sidebar
     sections:
