fixed pharmacy gallery

--- a/resources/blueprints/collections/pharmacy/pharmacy.yaml
+++ b/resources/blueprints/collections/pharmacy/pharmacy.yaml
@@ -120,6 +120,8 @@ tabs:
                             visibility: visible
                             replicator_preview: true
                             hide_display: false
+                            max_files: 1
+                            min_files: 1
               type: replicator
               display: 'Pharmacy Image'
               listable: hidden
