changes made to the services page

--- a/resources/blueprints/collections/eye_surgery_and_procedures/eye_surgery_and_procedure.yaml
+++ b/resources/blueprints/collections/eye_surgery_and_procedures/eye_surgery_and_procedure.yaml
@@ -13,6 +13,33 @@ tabs:
               validate:
                 - required
           -
+            handle: service_description
+            field:
+              restrict: false
+              buttons:
+                - bold
+                - italic
+                - unorderedlist
+                - orderedlist
+                - quote
+                - link
+                - image
+                - table
+              automatic_line_breaks: true
+              automatic_links: false
+              escape_markup: false
+              heading_anchors: false
+              smartypants: false
+              table_of_contents: false
+              antlers: false
+              type: markdown
+              display: 'Service description'
+              listable: hidden
+              instructions_position: above
+              visibility: visible
+              replicator_preview: true
+              hide_display: false
+          -
             handle: sub_title
             field:
               input_type: text
@@ -25,11 +52,36 @@ tabs:
               replicator_preview: true
               hide_display: false
           -
-            handle: description
+            handle: services
             field:
-              antlers: false
-              type: textarea
-              display: Description
+              collapse: false
+              previews: true
+              fullscreen: true
+              sets:
+                new_set_group:
+                  display: 'New Set Group'
+                  instructions: null
+                  icon: null
+                  sets:
+                    new_set:
+                      display: 'New Set'
+                      instructions: null
+                      icon: null
+                      fields:
+                        -
+                          handle: service_name
+                          field:
+                            input_type: text
+                            antlers: false
+                            type: text
+                            display: 'service name'
+                            listable: hidden
+                            instructions_position: above
+                            visibility: visible
+                            replicator_preview: true
+                            hide_display: false
+              type: replicator
+              display: Services
               listable: hidden
               instructions_position: above
               visibility: visible
